--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
   </div>
 
+  <footer>Made with 	&#10084;  in INDIA <br> <span> By ShivamSinghShamsher</span></footer>
 
   <script src="script.js"></script>
 
@@ -59,5 +60,3 @@
 </body>
 
 </html>
-
-
